translation tag fixes

--- a/portal/templates/gil/404.html
+++ b/portal/templates/gil/404.html
@@ -7,7 +7,7 @@
       <div class="page-intro page-intro--dark page-intro--contact" style="background-image: url({{url_for('static', filename='img/Contact-Background.jpg') }})">
         <div class="page-intro__content">
           <h1 class="page-intro__main">{{_("Page Not found")}}</h1>
-          <p class="page-intro__sub">{{_("Sorry, the page you requested is not found. It may have been moved.")}}</p>
+          <p class="page-intro__sub">{{_("Sorry, the page you requested was not found. It may have been moved.")}}</p>
         </div>
       </div>
     </main>
