--- a/portal/templates/gil/alonzo_mccann_story.html
+++ b/portal/templates/gil/alonzo_mccann_story.html
@@ -7,7 +7,7 @@
       <div class="page-intro module-wrap module-wrap--story">
         <div class="module">
           <div class="accent-heading">
-            {{_("Objective N")}}<em>{{_("o")}}</em>{{_("2: LIVED EXPERIENCE")}}
+            {{_("Objective")}} N<em>o</em><span class="text-uppercase">{{_("2: Lived Experience")}}</span>
           </div>
           <div class="module__body">
             <p class="story-title">{{_("ALONZO McCANN")}}</p>
