--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -67,8 +67,8 @@
                   <label class="field__label">{{_("About You")}}</label>
                   <select id="about" name="about" class="field__select">
                     <option value="">{{_("Select")}}</option>
-                    <option value="{{_("I've been diagnosed with prostate cancer")}}">{{_("I've been diagnosed with prostate cancer")}}</option>
-                    <option value="{{_('I want to learn more about prostate cancer')}}">{{_("I want to learn more about prostate cancer")}}</option>
+                    <option value="I've been diagnosed with prostate cancer">{{_("I've been diagnosed with prostate cancer")}}</option>
+                    <option value="I want to learn more about prostate cancer">{{_("I want to learn more about prostate cancer")}}</option>
                   </select>
                 </div>
               </div>
