--- a/portal/templates/gil/hirsch_brothers_story.html
+++ b/portal/templates/gil/hirsch_brothers_story.html
@@ -26,9 +26,7 @@
             <br/>
             <p class="story-text story-text--left">{{_("With a new diagnosis of prostate cancer, Jon urged his brother Mark to get checked as well. Mark went to their father’s urologist and although his prostate wasn’t enlarged, the Hirsch family history led him to get further tests. He was eventually diagnosed with prostate cancer, with a Gleason grade of 4 + 3. His cancer was even more aggressive than Jon’s.")}}</p>
             <br/>
-            {% trans quote="Our dad felt terrible. He was almost apologetic, like he passed on bad genes. I think he felt guilty. But we weren’t blaming anyone. We were all shocked and frightened,", text="said Jon" %}
-            <p class="story-text story-text--left">"{{quote}}" {{text}}.</p>
-            {% endtrans %}
+            <p class="story-text story-text--left">{{_('"Our dad felt terrible. He was almost apologetic, like he passed on bad genes. I think he felt guilty. But we weren&apos;t blaming anyone. We were all shocked and frightened," said Jon.')}}</p>
             <br/>
             <p class="story-text story-text--left">{{_("The twins began trying to figure out the best treatment plan to tackle their disease. Sharing research and going through the experience with each other made the process a lot less difficult.")}}</p>
             <br/>
@@ -38,10 +36,8 @@
             <br/>
             <p class="story-text story-text--left">{{_('"We both had amazing outcomes with no adverse effects or consequences," said Jon. Both brothers are now functioning almost 100 percent as well as they were before the surgery.')}}</p>
             <br/>
-            {% trans quote="Our dad hasn’t had the positive outcome we’ve had. I count my blessings every day for the positive outcome of our treatment,", text=" said Mark" %}
-            <p class="story-text story-text--left">"{{quote}}" {{text}}.</p>
+            <p class="story-text story-text--left">{{_('"Our dad hasn&apos;t had the positive outcome we&apos;ve had. I count my blessings every day for the positive outcome of our treatment," said Mark.')}}</p>
             <br/>
-            {% endtrans %}
             <p class="story-text story-text--left">{{_("Men with a father, brother or son who have a history of prostate cancer are more than two times as likely to develop the disease, while those with two or more relatives are nearly four times as likely to be diagnosed. The risk is highest in men whose family members were diagnosed before age 65.")}}</p>
             <br/>
             <p class="story-text story-text--left">{{_("With three generations of prostate cancer diagnoses, Jon and Mark are now trying to educate the rest of their family about the health risks they face. Their three brothers have all been checked and are staying vigilant. Mark’s 19-year-old son is aware that he will need to begin prostate cancer screening earlier than most men. Jon and Mark’s daughters know that if they have sons they will have a genetic predisposition to prostate cancer.")}}</p>
