--- a/portal/templates/gil/500.html
+++ b/portal/templates/gil/500.html
@@ -7,9 +7,9 @@
       <div class="page-intro page-intro--dark page-intro--contact" style="background-image: url({{url_for('static', filename='img/Contact-Background.jpg') }})">
         <div class="page-intro__content">
           <h1 class="page-intro__main">{{_("Internal Server Error")}}</h1>
-          <p class="page-intro__sub">{{_("Your request is not processed due to server error(s). If you are still experiencing problem.  Please use the link below.")}}</p>
+          <p class="page-intro__sub">{{_("Your request was not processed due to server error(s). If you are still experiencing problem.  Please use the link below.")}}</p>
           <br/>
-          <p><a href="{{PORTAL}}/contact" class="icon-box__button icon-box__button--main">{{_("Send Message")}}</a></p>
+          <p><a href="{{PORTAL}}{{url_for('portal.contact')}}" class="icon-box__button icon-box__button--main">{{_("Send Message")}}</a></p>
         </div>
       </div>
     </main>
