add missing translation tags in portal templates

--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -25,7 +25,7 @@
     <img  src="{{ url_for('static', filename='img/spacer.jpg') }}" class="tnth-image img-responsive hidden-xs" style="visibility:hidden" alt="spacer image"/>
     <div id="fullSizeContainer">
 
-        <div class="text-center"><a href="/"><img id="fullSizeLogo" src="{{ url_for('static', filename='img/logo_wordmark.png') }}" alt="TrueNTH" /></a></div>
+        <div class="text-center"><a href="/"><img id="fullSizeLogo" src="{{ url_for('static', filename='img/logo_wordmark.png') }}" alt="{{_('TrueNTH')}}" /></a></div>
 
         <div id="wellContainer">
             <div class="tnth-splash">
