--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -25,7 +25,7 @@
                         <label for="email">{{ _("Email Address") }}</label>
                         <input type="text" class="form-control" id="email" name="email" autocomplete="off" placeholder="{{ _('Email Address') }}" value="" data-customemail="true" required />
                         <div id="noEmailContainer">
-                            <input type="checkbox" id="noEmail" class="text-muted">&nbsp;&nbsp;<span class="text-muted">User does not have email address</span>
+                            <input type="checkbox" id="noEmail" class="text-muted">&nbsp;&nbsp;<span class="text-muted">{{_("User does not have email address")}}</span>
                         </div>
                         <div class="help-block with-errors" id="erroremail"></div>
                     </div>
