--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1558,10 +1558,10 @@
         );
     </script>
 {%- endmacro %}
-{% macro profileStudyID(person) -%}
+{% macro profileStudyID(person, current_user) -%}
     <div id="profileStudyIDContainer" class="form-group" data-loader-container="true">
         <label class="text-muted">{{_("Study ID")}}</label>
-        <input type="text" id="profileStudyId" class="form-control" required/>
+        <input type="text" id="profileStudyId" class="form-control" required {%if current_user and current_user.has_role(ROLE.PATIENT) %}disabled{% endif %}/>
         <div class="help-block with-errors"></div>
     </div>
 {%- endmacro %}
@@ -1724,7 +1724,7 @@
                 <div class="edit-container">
                     {{profileName(person)}}
                     {{profileBirthDate(person)}}
-                    {%- if person and person.has_role(ROLE.PATIENT) %}{{profileStudyID(person)}}{% endif -%}
+                    {%- if person and person.has_role(ROLE.PATIENT) %}{{profileStudyID(person, current_user)}}{% endif -%}
                     {{profileEmail(person)}}
                     {{profilePhone(person)}}
                     {{profileAltPhone(person)}}
@@ -1862,7 +1862,7 @@
                 <div class="edit-container">
                     {{profileName(person)}}
                     {{profileBirthDate(person)}}
-                    {% if person.has_role('patient') %} {{profileStudyID(person)}} {% endif %}
+                    {% if person.has_role('patient') %} {{profileStudyID(person, current_user)}} {% endif %}
                     {{profileEmail(person)}}
                     {{profilePhone(person)}}
                     {{profileAltPhone(person)}}
