eproms website content fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -482,6 +482,16 @@ div.right-panel {
     margin-top: 0.5em;
   }
 }
+.terms-tick-box {
+  float: left;
+  width: 2%;
+  margin: 0.3em 0.5em 0 0;
+}
+.terms-tick-box-text {
+  float: left;
+  width: 94.5%;
+  max-width: 100%;
+}
 #termsCheckbox {
   width: 1000px;
   max-width: 100%;
