--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -421,6 +421,16 @@ h4.detail-title {
     text-decoration: underline;
   }
 }
+.terms-tick-box {
+  float: left;
+  width: 2%;
+  margin: 0.3em 0.5em 0 0;
+}
+.terms-tick-box-text {
+  float: left;
+  width: 94.5%;
+  max-width: 100%;
+}
 .box-consent-container {
   width: 300px;
   max-width: 100%;
